k8s/06-app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ethos-go-app
  namespace: ethos-go
  labels:
    app: ethos-go
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: ethos-go
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ethos-go-app
  namespace: ethos-go
  labels:
    app: ethos-go
spec:
  selector:
    matchLabels:
      app: ethos-go
  replicas: 1
  template:
    metadata:
      labels:
        app: ethos-go
    spec:
      containers:
      - name: ethos-go
        image: sammidev/ethos-go:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
